# rainfrog

./: .envrc  .gitignore  .markdownlint.json  .rustfmt.toml  00_init.sql  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  demo.tape  docker-compose.yml  install.sh
.cargo/: config.toml
.config/: config.json5  rainfrog_config.toml
.github/: funding.yaml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
demo/: demo.tape
dev/: duckdb_init.sql  mysql_init.sql  oracle_init.sql  pg_init.sql  rainfrog.db  rainfrog.sqlite3  sqlite_init.sql
src/: action.rs  app.rs  cli.rs  completion.rs  components.rs  config.rs  database.rs  focus.rs  generic_database.rs  keyring.rs  main.rs  mode.rs  popups.rs  tui.rs  ui.rs  utils.rs  vim.rs  widgets.rs
src/completion/: mod.rs  render.rs
src/components/: data.rs  editor.rs  favorites.rs  fps.rs  history.rs  home.rs  ide.rs  menu.rs  mod.rs  scroll_table.rs  scrollable.rs
src/database/: builtin_functions.rs  duckdb.rs  mod.rs  mysql.rs  oracle.rs  postgresql.rs  sqlite.rs
src/database/oracle/: connect_options.rs  mod.rs
src/popups/: confirm_bypass.rs  confirm_export.rs  confirm_query.rs  confirm_tx.rs  confirm_yank.rs  confirm_yank_data.rs  exporting.rs  mod.rs  name_favorite.rs
src/widgets/: scrollable.rs
vhs/: demo.tape
