[package]
name = "rainfrog"
version = "0.2.6"
edition = "2021"
rust-version = "1.80"
description = "a database management tui for postgres"
repository = "https://github.com/achristmascarl/rainfrog"
authors = ["achristmascarl <carl@rainfrog.dev>"]
build = "build.rs"
license = "MIT"
exclude = [
  ".github/*",
  "vhs/*",
  "dev/*",
  ".git/*",
  "Makefile",
  "docker-compose.yml",
]

[profile.dev]
opt-level = 2 # very slow on 1, basically as fast as --release on 2

[profile.release]
strip = "debuginfo"
lto = "fat"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.4.5", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
color-eyre = "0.6.2"
config = "0.14.0"
crossterm = { version = "0.28.0", features = [
  "libc",
  "serde",
  "event-stream",
  "bracketed-paste",
] }
derive_deref = "1.1.1"
directories = "5.0.1"
futures = "0.3.28"
human-panic = "1.2.0"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
pretty_assertions = "1.4.0"
ratatui = { version = "0.28.0", features = [
  "serde",
  "macros",
  "unstable-widget-ref",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
sqlx = { version = "0.8.1", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "ipnetwork",
  "mysql",
  "sqlite",
] }
strip-ansi-escapes = "0.2.0"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
toml = "0.8.19"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
chrono = { version = "0.4", default-features = false }
chrono-tz = { version = "0.5", default-features = false }
indexmap = "2.2.6"
tui-textarea = { version = "0.6.1", features = ["search"] }
sqlparser = "0.49.0"
arboard = { version = "3.4.1", optional = true, features = [
  "wayland-data-control",
] }
rpassword = "7.3.1"
async-trait = "0.1.83"

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide", "cargo"] }

[features]
default = ["dep:arboard"]
termux = []
