[package]
name = "rainfrog"
version = "0.3.3"
edition = "2024"
rust-version = "1.88"
description = "a database management tui"
repository = "https://github.com/achristmascarl/rainfrog"
authors = ["achristmascarl <carl@rainfrog.dev>"]
build = "build.rs"
license = "MIT"
exclude = [
  ".github/*",
  "vhs/*",
  "dev/*",
  ".git/*",
  "Makefile",
  "docker-compose.yml",
]

[profile.dev]
incremental = true
opt-level = 2      # very slow on 1, basically as fast as --release on 2

[profile.release]
strip = "debuginfo"
lto = "fat"

[dependencies]
better-panic = "0.3.0"
clap = { version = "4.4.5", features = [
  "derive",
  "cargo",
  "wrap_help",
  "unicode",
  "string",
  "unstable-styles",
] }
color-eyre = "0.6.2"
config = "0.14.1"
crossterm = { version = "0.28.1", features = [
  "libc",
  "serde",
  "event-stream",
  "bracketed-paste",
] }
derive_deref = "1.1.1"
directories = "6.0.0"
futures = "0.3.28"
human-panic = "2.0.2"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
pretty_assertions = "1.4.0"
ratatui = { version = "0.29.0", features = [
  "serde",
  "macros",
  "unstable-widget-ref",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "ipnetwork",
  "mysql",
  "sqlite",
] }
strip-ansi-escapes = "0.2.0"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.43.1", features = ["full"] }
tokio-util = "0.7.9"
toml = "0.8.19"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
chrono = { version = "0.4", default-features = false }
indexmap = "2.2.6"
tui-textarea = { version = "0.7.0", features = ["search"] }
sqlparser = "0.57.0"
arboard = { version = "3.4.1", optional = true, features = [
  "wayland-data-control",
] }
rpassword = "7.3.1"
async-trait = "0.1.83"
dotenvy = "0.15.7"
csv = "1.3.1"
percent-encoding = "2.3.1"

[target.'cfg(any(target_os = "macos", target_os = "ios", target_os = "android"))'.dependencies]
keyring = { version = "3.6.2", features = [
  "apple-native",
], default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring = { version = "3.6.2", features = [
  "linux-native",
], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.2", features = [
  "windows-native",
], default-features = false }

[build-dependencies]
anyhow = "1.0.93"
vergen = { version = "9.0.1", features = ["build", "cargo", "rustc", "si"] }
vergen-git2 = { version = "1.0.0", features = [
  "build",
  "cargo",
  "rustc",
  "si",
] }

[features]
default = ["dep:arboard"]
termux = []
